img/2/daemonset_multitool.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds-multitool
spec:
  selector:
    matchLabels:
      name: ds-multitool
  template:
    metadata:
      labels:
        name: ds-multitool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        command: ['sh', '-c', 'while true; do cat data/syslog; sleep 10; done']
        volumeMounts:
        - name: my-volume
          mountPath: /data
      volumes:
      - name: my-volume
        hostPath:
          path: /var/log
