img/2/dp_multitool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-multitool
  namespace: lesson3
spec:
  selector:
    matchLabels:
      name: dp-multitool
  template:
    metadata:
      labels:
        name: dp-multitool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        volumeMounts:
        - name: my-volume
          mountPath: /data
      volumes:
      - name: my-volume
        persistentVolumeClaim:
          claimName: pvc-nfs
